--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Simple Mouse Clicker
-description: A mouse auto clicker, for free!
+description: An auto clicker, for free!
 show_downloads: true
-google_analytics: UA-105337133-3
+google_analytics: UA-105337133-4
 theme: jekyll-theme-slate
 plugins:
   - jekyll-sitemap
