--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Simple Mouse Clicker
 description: An auto clicker, for free!
 show_downloads: true
-google_analytics: UA-105337133-4
+google_analytics: G-8Y7F0HXRT5
 theme: jekyll-theme-slate
 plugins:
   - jekyll-sitemap
